fix wrap of InChIs

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,7 +116,7 @@ a:hover{
   padding-right: 3px;
 }
 
-.smiles {
+.smiles, .wrap {
   word-break: break-all !important;
 }
 
